# python-playground

./: .gitignore
groqx/: main.py
grpc_compile/go/: gen.go  go.mod  main.go
grpc_compile/go/pb/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
grpc_compile/python/: greeter_client.py  greeter_server.py  helloworld_pb2.py
ollamax/: main.py
openaix/: pyproject.toml
openaix/openaix/: main.py
py_shared/: setup.py
